# marlowe-lsp

./: .gitignore  README.md  build-server-bin.ps1  build-server-wasi.ps1  build-server-wasm.ps1  build-server.ps1  build-vscode-ext.ps1  build.ps1  build_client.ps1  build_server.ps1  cpclidbg.ps1  cpclirel.ps1  extract-bins.ps1  marlowe_lsp_lib_bg.wasm
.github/workflows/: build_server_bins.yml
Clients/VSCode/: .vscodeignore  build-client.ps1  dbgbuild.ps1  hash.py  icon.theme.json  language-configuration.json  marlowe-dark-theme.json  marlowe-light-theme.json  marlowe.tmLanguage.json  marlowe_lang.json  marlowelsp-0.0.1.vsix  marlowelsp-0.0.14.vsix  marlowelsp-0.0.15.vsix  marlowelsp-0.0.16.vsix  marlowelsp-0.0.17.vsix  marlowelsp-0.0.19.vsix  package-lock.json  package.json  tsconfig.json  webpack.config.js
Clients/VSCode/client/: package-lock.json  package.json  tsconfig.json
Clients/VSCode/client/src/: browserClientMain.ts
Clients/VSCode/server/: package-lock.json  package.json  tsconfig.json
Clients/VSCode/server/src/: browserServerMain.ts
Clients/VSCode/src/client/: extension.ts
Clients/VSCode_WASI/: pack.sh  package.json  readme.md  test.marlowe
Clients/VSCode_WASI/client/: package-lock.json  package.json
Clients/VSCode_WASI/client/src/: extension.ts  lspServer.ts
Server/: Cargo.toml  sex.grammars
Server/sample_contracts/: warn_on_invalid_payments.marlowe
Server/src/: bin.rs  codespan_lsp_local.rs  lib.rs  main.rs  s_expressions.rs
Server/src/common/: codespan_lsp_local.rs  mod.rs
