[package]
name = "marlowe_lsp"
version = "0.1.1"
edition = "2021"


[dependencies]
decurse = "0.0.4"
codespan = "*"
codespan-reporting = "*"
serde = "*"
serde_json = "*"
tokio-util = { version = "0.7",  features = ["codec"] }
tokio = { version = "1.17", features = ["full"]}
lsp-types = "0.93.0" 
pest = "*"
pest_derive = "*"
schemars = "*"
marlowe_lang = "0.1.16"
#marlowe_lang = { path = "C:/Users/Olof Blomqvist/Documents/GitHub/marlowe_rust" }
async-std = "1.10.0"
futures = "0.3.21"
tower-lsp = "0.17"
regex = "1.5.6"
line-col = "0.2.1"
quote = "1.0.21"