[package]
name = "marlowe_lsp"
version = "0.1.2"
edition = "2021"

[lib]
name = "marlowe_lsp_lib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
required-features = ["libdeps"]

[[bin]]
name = "marlowe_lsp"
path = "src/bin.rs"


[dependencies]
codespan = "*"
codespan-reporting = "*"
serde = "*"
serde_json = {version="1.0.103"}
lsp-types = "0.93.0" 
marlowe_lang = { version="0.3.0", features=[ "unstable","utils"  ], default-features = false}
regex = "1.5.6"
line-col = "0.2.1"
anyhow = "*"
console_error_panic_hook = {version="0.1.7" }
pest = "2.7.1"
pest_derive = "2.7.1"
decurse = "0.0.4"

serde-wasm-bindgen = { version= "0.5.0", optional = true }
wasm-bindgen = { version="0.2.87", optional = true }
js-sys = { version = "0.3.64", optional = true }
web-sys = { version = "0.3.64", features=["console","DedicatedWorkerGlobalScope","MessageEvent"] , optional = true }
wasm-bindgen-futures = {version= "0.4.37", optional = true } 
gloo-utils = {version= "0.1.7", optional = true } 

[features]
libdeps = [
    "serde-wasm-bindgen",
    "wasm-bindgen",
    "js-sys",
    "web-sys",
    "wasm-bindgen-futures",
    "marlowe_lang/js",
    "marlowe_lang/unstable",
    "marlowe_lang/utils"
]